Bug Fixes + Socials Spacing

--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -20,7 +20,7 @@
     align-items: center;
     list-style: none;
     padding: 15px;
-    gap: 0 125px;
+    gap: 0 75px;
     margin: 0;
     padding: 0;
     position: relative;
